force-app/main/default/objects/Blood_Coordination__c/Blood_Coordination__c.object-meta.xml
<CustomObject>
    <label>Blood Coordination</label>
    <nameField>
        <label>Blood Coordination Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blood Coordinations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>