force-app/main/default/objects/Blood_Coordination__c/fields/Attender_contact__c.field-meta.xml
<CustomField>
    <fullName>Attender_contact__c</fullName>
    <formula>patient__r.attender_contact_NO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attender contact</label>
    <type>Text</type>
</CustomField>