force-app/main/default/objects/Blood_Coordination__c/fields/Donor__c.field-meta.xml
<CustomField>
    <fullName>Donor__c</fullName>
    <label>Donor</label>
    <referenceTo>Blood_donor__c</referenceTo>
    <relationshipLabel>Blood Coordinations</relationshipLabel>
    <relationshipName>Blood_Coordinations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>