force-app/main/default/objects/Blood_Coordination__c/fields/Donor_blood_group__c.field-meta.xml
<CustomField>
    <fullName>Donor_blood_group__c</fullName>
    <formula>TEXT( Donor__r.blood_group__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor blood group</label>
    <type>Text</type>
</CustomField>