force-app/main/default/objects/Blood_Coordination__c/fields/Donor_name__c.field-meta.xml
<CustomField>
    <fullName>Donor_name__c</fullName>
    <formula>Donor__r.donor_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor name</label>
    <type>Text</type>
</CustomField>