force-app/main/default/objects/Blood_Coordination__c/fields/patient__c.field-meta.xml
<CustomField>
    <fullName>patient__c</fullName>
    <label>patient</label>
    <referenceTo>blood_request__c</referenceTo>
    <relationshipLabel>Blood Coordinations</relationshipLabel>
    <relationshipName>Blood_Coordinations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>