force-app/main/default/objects/Blood_Coordination__c/fields/patient_name__c.field-meta.xml
<CustomField>
    <fullName>patient_name__c</fullName>
    <formula>patient__r.patient_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>patient name</label>
    <type>Text</type>
</CustomField>